2009-04-15 N. Dan Smith (nathan@ndansmith.net)
	* Ported to nongnu

2009-04-12 N. Dan Smith (nathan@ndansmith.net)
	* Happy Easter!
	* Added image files
	* Started with very basic parsing schema for testing purposes
	
2009-04-11 N. Dan Smith (nathan@ndansmith.net)
	* Initialized project.